# mapbox-vector-tile

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  circle.yml  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml  pre-commit.yml
bench/: bench_encode.py
mapbox_vector_tile/: __init__.py  command.py  compat.py  decoder.py  encoder.py  geom_encoder.py  mvt_decode.py  optimise.py  polygon.py  simple_shape.py  utils.py
mapbox_vector_tile/Mapbox/: vector_tile.proto  vector_tile_p3_pb2.py  vector_tile_pb2.py  vector_tile_pb2_p3.py
tests/: __init__.py  error_nested_multipolygon.wkt  errors.wkt  test_decoder.py  test_encoder.py  test_optimise.py  test_polygon.py
vector_tile/: __init__.py  decoder.py  tile.py
vector_tile/Mapbox/: vector_tile_pb2.py
