[tool.poetry]
name = "mapbox-vector-tile"
version = "2.1.1"
description = "Mapbox Vector Tile encoding and decoding."
license = "MIT"
authors = [
    "Rob Marianski <rob@marianski.com>",
]
repository = "https://github.com/tilezen/mapbox-vector-tile"
readme = "README.md"
exclude = [
    "**/tests/**",
    "**/*.wkt",
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
include = [
    "mapbox_vector_tile/Mapbox/*.proto",
    "README.md",
    "CHANGELOG.md",
]
packages = [
    { include = "mapbox_vector_tile" }
]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.9"
protobuf = "^5.26.1"
shapely = "^2.0.0"
pyclipper = "^1.3.0"
pyproj = { version = "^3.4.1", optional = true }

[tool.poetry.extras]
proj = ["pyproj"]

[tool.poetry.group.test.dependencies]
tox = "^4.0.16"
coverage = { version = "^7.0.0", extras = ["toml"] }

[tool.ruff]
line-length = 120
target-version = "py38"
show-fixes = true
extend-include = ["*.ipynb"]
extend-exclude = ["mapbox_vector_tile/Mapbox/vector_tile_pb2.py"]

[tool.ruff.lint]
select = ["E", "F", "C90", "W", "B", "UP", "I", "RUF100", "TID", "SIM", "PIE", "N", "C4", "G", "PTH"]
unfixable = ["B"]
extend-ignore = ["B024", "G004", "UP038"]
flake8-tidy-imports.ban-relative-imports = "all"
mccabe.max-complexity = 15
pep8-naming.extend-ignore-names = ["assertRoundTrip"]

# Coverage
[tool.coverage.run]
omit = ["mapbox_vector_tile/Mapbox/vector_tile_pb2.py"]
